--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.9
   provider: ^6.1.1
+  flutter_staggered_grid_view: ^0.7.0
 
 
 dev_dependencies:
