--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_svg: ^2.0.9
   provider: ^6.1.1
   flutter_staggered_grid_view: ^0.7.0
+  font_awesome_flutter: ^10.6.0
 
 
 dev_dependencies:
