--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   provider: ^6.1.1
   flutter_staggered_grid_view: ^0.7.0
   font_awesome_flutter: ^10.6.0
+  animate_do: ^3.1.2
 
 
 dev_dependencies:
